--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
           ssh -o StrictHostKeyChecking=no ${{ secrets.VM_USER }}@${{ secrets.VM_IP }} << 'EOF'
 
           # Define variables
-          APP_DIR="/portfolio-projects/ecomerce-app"
+          APP_DIR="~/portfolio-projects/ecomerce-app"
           REPO="https://github.com/${GITHUB_REPOSITORY}.git"
           BRANCH="main"
 
