--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,7 @@ jobs:
           APP_DIR="portfolio-projects/ecomerce-app"
           REPO="https://github.com/Cypherfelix/payload-tech-ecommerce.git"
           BRANCH="main"
+          ENV_CONTENT="${{ secrets.VM_SSH_PRIVATE_KEY }}"
 
           # Clone the repository if it doesn't exist
           if [ ! -d "$APP_DIR" ]; then
@@ -39,7 +40,7 @@ jobs:
           # Navigate to the application directory
           cd $APP_DIR
 
-          ls -la
+          echo $ENV_CONTENT
 
           echo "Deployment complete."
 
