--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
 
             # Install dependencies
             echo "Installing dependencies..."
-            npm install
+            npm install --legacy-peer-deps
 
             # Build the application
             echo "Building the application..."
